updateAppointment